more navbar fixing - menubuttons overlapping on filmlist page, fixed - but it's not beautiful

--- a/src/css/filmList.css
+++ b/src/css/filmList.css
@@ -1,6 +1,9 @@
 * {
   color: var(--color-primary);
 }
+.heading {
+  font-size: large;
+}
 /*filmlistbox needs to be flex  -vertical align items+scrollable, 
 &grid on each filmcard to place elements within*/
 .filmListBox {
@@ -11,7 +14,6 @@
   overflow-x: hidden;
   scroll-snap-type: y mandatory;
   touch-action: pan-y;
-  /* width: 100vw; */
 }
 .filmCard {
   display: grid;
@@ -75,6 +77,7 @@
   font-size: 12px;
   text-align: center;
   width: 150px;
+  color: var(--color-darker);
 }
 
 .footer {
@@ -83,12 +86,15 @@
   background-size: cover;
 }
 
-@media (min-width: 900px) {
-  /*horizontal scroll*/
+@media (min-width: 500px) {
+  .heading {
+    font-size: xx-large;
+    position: absolute;
+    top: 12%;
+  }
 
   .filmListBox {
-    grid-area: main;
-    display: flex;
+    /* flip the list horizontally */
     flex-direction: row;
     overflow-y: hidden;
     overflow-x: scroll;
@@ -112,23 +118,21 @@
     /* width:500px;
         height:100vh; */
   }
-  .heading {
-    font-size: xx-large;
-    position: absolute;
-    top: 130px;
-  }
+
   /*Div around each card element gives chance to enlarge background without effing up content!*/
   .filmCard {
     grid-template-rows: repeat(12, minmax(20px, 1fr));
     grid-template-columns: repeat(12, minmax(20px, 1fr));
-    /*then rotate each image so it's the right way*/
+    /*mousewheelscroll: then rotate each image so it's the right way*/
     /* transform: rotate(90deg); */
     /* transform-origin: right top; */
-    background-image: url(https://i.ibb.co/Cn6dWDH/blkgold-film-Frame.png);
-    background-size: contain;
+    /*too hard. This is a way to do it but I don't have enough time 
+    to make it look ok as well. Sorry for the horizontal scrollbars :(*/
+    background-image: url(https://i.ibb.co/r2G5R4P/blkgold-film-Frame-horiz.png);
     background-position: center;
     height: 260px;
   }
+
   .filmCard > img {
     grid-column: 1/7;
     grid-row: 2/12;
@@ -162,7 +166,6 @@
     grid-column: 7/11;
     grid-row: 11/13;
     width: 160px;
-    text-align: center;
     margin-left: -20px;
     font-size: 15px;
   }
