--- a/src/css/navBar.css
+++ b/src/css/navBar.css
@@ -101,8 +101,9 @@ a {
 
 .genreMenuContainer {
   position: absolute;
-  top: 5%;
-  right: 40%;
+  top: 0.7%;
+  right: 20%;
+  margin-right: 5%;
 }
 
 /*hide checkbox*/
@@ -120,25 +121,23 @@ a {
 }
 
 .genreBtn {
-  display: flex;
-  position: fixed;
-  top: 1%;
-  right: 30%;
+  position: absolute;
   text-size-adjust: 100%;
   background-color: #ede59c;
   color: #373736;
   border-radius: 10px;
   margin: 0;
-  height: 3%;
+  height: 31px;
   width: 70px;
   max-width: 75px;
   align-items: center;
-  padding-left: 7px;
+  padding-left: 10px;
+  padding-top: 5px;
 }
 
 .genreMenuItems {
   position: absolute;
-  top: -15px;
+  top: 20px;
   right: -65px;
   height: auto;
   opacity: 0;
@@ -150,6 +149,7 @@ a {
   border: 1px solid black;
   width: 25vw;
   max-width: 108px;
+  min-width: 81px;
   border-radius: 10px;
   margin-bottom: 3px;
   text-align: center;
@@ -162,19 +162,10 @@ a {
   font-size: large;
 }
 
-@media (max-width: 360px) {
-  .genreBtn {
-    left: 50%;
-  }
-}
-
-@media (min-width: 900px) {
+@media (max-width: 580px) {
   .genreMenuContainer {
     position: absolute;
-    top: 5%;
-    right: 14%;
-  }
-  .genreBtn {
-    right: 10%;
+    top: 0.7%;
+    right: 50%;
   }
 }
